# clean-architecture-template

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  main.py  pyproject.toml
.github/actions/apply-migrations/: action.yml
.github/actions/check-migrations/: action.yml
.github/actions/code-style/: action.yml
.github/actions/environment/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml
src/: settings.py
src/infra/: entrypoint.py
src/infra/api/: builder.py
src/infra/cli/: builder.py
src/infra/cli/apps/: db.py
src/infra/db/: tables.py
src/infra/db/migrations/: env.py
src/services/: sqla.py
tests/impl/: settings.py
tests/impl/services/: sqla.py
